Split into subprojects in order to isolate Elasticsearch implementations.
In preparation for Elasticsearch 9.x.

Subprojects:

- `core`: Elasticsearch base class + Utils (no internal dependencies)
- `esX`:  Elasticsearch implementations (depend on `core`)
- `main`: Application classes + Tests (depends on `core` and `esX`)

Changes:

- `src/conf/...` -> `config/...`
- Gradle task `versions` -> `printVersions`
- Dropped `log4j-core` dependency and `antlr-runtime` constraint.